--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -57,9 +57,8 @@
                                     <div class="card-header py-3">
                                         <div class="h4 m-0">All users</div>
                                     </div>
-                                    <div class="border shadow-sm p-3 mb-5 bg-white rounded-bottom topTable"
-                                         style="max-width: 98%;">
-                                        <table class="table table-striped">
+                                    <div class="card-body">
+                                        <table class="table table-striped border-top">
                                             <thead>
                                             <tr>
                                                 <th scope="col">ID</th>
